--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
      padding-top: 80px; 
  }
  /*main*/
- .wraper{
+ .wrapper{
      text-align: center;
      width: 1200px;
      margin: auto;
