--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body {
      margin-right: 60px;
      margin-bottom: 115px;
      text-align: left;
+     vertical-align: top;
  }
 
  .last-article-preview-list-items h2{
